# custom-pytorch-kernels

./: README.md  bindings.py  models.py  pyproject.toml  setup.py  trainer.py
extensions/cuda/: bindings.py  mlp.cu  mlp_binding.cpp  test_mlp.py
extensions/triton/: bindings.py  mlp.py
